# naver_complexes_crawler

./: README.md  complexes_crawler.py  pyproject.toml  region_data_20250525_143203.json
complexes/경기도/가평군/: 가평읍_complexes.json  상면_complexes.json  설악면_complexes.json  조종면_complexes.json  청평면_complexes.json
complexes/경기도/고양시 덕양구/: 고양동_complexes.json  관산동_complexes.json
